--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@400;700&family=Suez+One&display=swap');
+/* Images created by: https://unsplash.com/@pawel_czerwinski */
 
+@import url("https://fonts.googleapis.com/css?family=Spartan:400,700&display=swap");
 
 html {
   box-sizing: border-box;
@@ -19,14 +20,14 @@ body {
 .player-container {
   height: 500px;
   width: 400px;
-  background: #e1e3e5;;
+  background: #e7e7e7;
   border-radius: 20px;
   box-shadow: 0 15px 30px 5px rgba(0, 0, 0, 0.3);
 }
 
 .img-container {
-  height: 300px;
   width: 300px;
+  height: 300px;
   position: relative;
   top: -50px;
   left: 50px;
@@ -38,7 +39,6 @@ body {
   object-fit: cover;
   border-radius: 20px;
   box-shadow: 0 5px 30px 5px rgba(0, 0, 0, 0.5);
-
 }
 
 h2 {
@@ -68,8 +68,7 @@ h3 {
   background: #242323;
   border-radius: 5px;
   height: 100%;
-  /* change this to show progress */
-  width: 66%;
+  width: 0%;
   transition: width 0.1s linear;
 }
 
@@ -92,10 +91,13 @@ h3 {
   font-size: 30px;
   color: rgb(129, 129, 129);
   margin-right: 30px;
-
+  cursor: pointer;
+  user-select: none;
 }
 
-
+.fas:hover {
+  filter: brightness(80%);
+}
 
 .main-button {
   font-size: 40px;
